NetBSD Problem Report #58603

From www@netbsd.org  Thu Aug 15 23:19:51 2024
Return-Path: <www@netbsd.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.3 with cipher TLS_AES_256_GCM_SHA384 (256/256 bits)
	 key-exchange X25519 server-signature RSA-PSS (2048 bits)
	 client-signature RSA-PSS (2048 bits))
	(Client CN "mail.NetBSD.org", Issuer "mail.NetBSD.org CA" (not verified))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E21C61A9242
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 15 Aug 2024 23:19:50 +0000 (UTC)
Message-Id: <20240815231949.B76181A9243@mollari.NetBSD.org>
Date: Thu, 15 Aug 2024 23:19:49 +0000 (UTC)
From: campbell+netbsd@mumble.net
Reply-To: campbell+netbsd@mumble.net
To: gnats-bugs@NetBSD.org
Subject: getentropy(3): update visibility and documentation for POSIX.1-2024
X-Send-Pr-Version: www-1.0

>Number:         58603
>Category:       standards
>Synopsis:       getentropy(3): update visibility and documentation for POSIX.1-2024
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    standards-manager
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Aug 15 23:20:00 +0000 2024
>Closed-Date:    Wed Oct 09 13:35:18 +0000 2024
>Last-Modified:  Wed Oct 09 13:35:18 +0000 2024
>Originator:     Taylor R Campbell
>Release:        current, 10
>Organization:
The NentropyBSD.1-2024 Foundation
>Environment:
>Description:
getentropy(3) is now in POSIX.1-2024:

https://pubs.opengroup.org/onlinepubs/9799919799.2024edition/functions/getentropy.html

Its declaration, and the definition of GETENTROPY_MAX, should be made visible in header files if _POSIX_C_SOURCE >= 202405L or _XOPEN_SOURCE >= 800, and the man page should cite POSIX.1-2024.
>How-To-Repeat:
cod inspection
>Fix:
Yes, please!

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->needs-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Thu, 15 Aug 2024 23:47:26 +0000
State-Changed-Why:
fixed in HEAD, needs pullup-10
(and pullup-9, if we want to pull getentropy up to 9 too)


From: "Taylor R Campbell" <riastradh@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58603 CVS commit: src
Date: Thu, 15 Aug 2024 23:44:50 +0000

 Module Name:	src
 Committed By:	riastradh
 Date:		Thu Aug 15 23:44:50 UTC 2024

 Modified Files:
 	src/include: limits.h unistd.h
 	src/lib/libc/gen: getentropy.3

 Log Message:
 getentropy(3): Make this visible to POSIX.1-2024 applications.

 Likewise GETENTROPY_MAX.

 It is now part of POSIX:

 https://pubs.opengroup.org/onlinepubs/9799919799.2024edition/functions/getentropy.html

 Cite standard in man page too.  While here, use `.Nm' rather than
 `.Fn getentropy' for self-reference in the man page, for consistency
 with other usage.

 PR standards/58603: getentropy(3): update visibility and documentation
 for POSIX.1-2024


 To generate a diff of this commit:
 cvs rdiff -u -r1.43 -r1.44 src/include/limits.h
 cvs rdiff -u -r1.166 -r1.167 src/include/unistd.h
 cvs rdiff -u -r1.6 -r1.7 src/lib/libc/gen/getentropy.3

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: needs-pullups->pending-pullups
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Wed, 09 Oct 2024 02:04:18 +0000
State-Changed-Why:
pullup-10 #938


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/58603 CVS commit: [netbsd-10] src
Date: Wed, 9 Oct 2024 13:12:40 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Wed Oct  9 13:12:40 UTC 2024

 Modified Files:
 	src/include [netbsd-10]: limits.h unistd.h
 	src/lib/libc/gen [netbsd-10]: getentropy.3

 Log Message:
 Pull up following revision(s) (requested by riastradh in ticket #938):

 	lib/libc/gen/getentropy.3: revision 1.7
 	include/limits.h: revision 1.44
 	include/unistd.h: revision 1.167

 getentropy(3): Make this visible to POSIX.1-2024 applications.

 Likewise GETENTROPY_MAX.

 It is now part of POSIX:
 https://pubs.opengroup.org/onlinepubs/9799919799.2024edition/functions/getentropy.html

 Cite standard in man page too.  While here, use `.Nm' rather than
 `.Fn getentropy' for self-reference in the man page, for consistency
 with other usage.

 PR standards/58603: getentropy(3): update visibility and documentation
 for POSIX.1-2024


 To generate a diff of this commit:
 cvs rdiff -u -r1.43 -r1.43.2.1 src/include/limits.h
 cvs rdiff -u -r1.163 -r1.163.2.1 src/include/unistd.h
 cvs rdiff -u -r1.4.2.1 -r1.4.2.2 src/lib/libc/gen/getentropy.3

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: pending-pullups->closed
State-Changed-By: riastradh@NetBSD.org
State-Changed-When: Wed, 09 Oct 2024 13:35:18 +0000
State-Changed-Why:
fixed in HEAD, pulled up to 10, inapplicable <10


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.47 2022/09/11 19:34:41 kim Exp $
$NetBSD: gnats_config.sh,v 1.9 2014/08/02 14:16:04 spz Exp $
Copyright © 1994-2024 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.